--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
   </main>
   <footer>
-    <div><img src="/launch-countdown-timer-main/images/icon-facebook.svg" alt=""></div>
-    <div><img src="/launch-countdown-timer-main/images/icon-instagram.svg" alt=""></div>
-    <div><img src="/launch-countdown-timer-main/images/icon-pinterest.svg" alt=""></div>
+    <div><img src="icon-facebook.svg" alt=""></div>
+    <div><img src="icon-instagram.svg" alt=""></div>
+    <div><img src="icon-pinterest.svg" alt=""></div>
 
   </footer>
 <script src="script.js"></script>
