--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <script src="script.js"></script>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">devcoder</a>.
   </div>
 </body>
 
